@@ -4,9 +4,8 @@ map_reduce_advanced (mongoc_database_t *database)
    bson_t *command;
    bson_error_t error;
    bool res = true;
-   mongoc_cursor_t *cursor;
    mongoc_read_prefs_t *read_pref;
-   const bson_t *doc;
+   bson_t doc;
 
    /* Construct the mapReduce command */
    /* Other arguments can also be specified here, like "query" or "limit"
@@ -22,25 +21,20 @@ map_reduce_advanced (mongoc_database_t *database)
                        "out",
                        "{",
                        "inline",
-                       "1",
+                       BCON_INT32 (1),
                        "}");
 
    read_pref = mongoc_read_prefs_new (MONGOC_READ_SECONDARY);
-   cursor = mongoc_database_command (database, MONGOC_QUERY_NONE, 0, 0, 0, command, NULL, read_pref);
-
-   /* Do something with the results */
-   while (mongoc_cursor_next (cursor, &doc)) {
-      print_res (doc);
-   }
-
-   if (mongoc_cursor_error (cursor, &error)) {
+   if (mongoc_database_command_simple (database, command, read_pref, &doc, &error)) {
+      print_res (&doc);
+   } else {
       fprintf (stderr, "ERROR: %s\n", error.message);
       res = false;
    }
 
-   mongoc_cursor_destroy (cursor);
    mongoc_read_prefs_destroy (read_pref);
    bson_destroy (command);
+   bson_destroy (&doc);
 
    return res;
 }
